[package]
authors = ["Error4767 <2303184060@qq.com>"]
edition = "2021"
name = "web_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web_server"
path = "src/transfer_serve_main.rs"
[[bin]]
name = "split_chunks_upload"
path = "src/upload_large_file_main.rs"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = { version = "4.3.1" }
actix-web-lab = "0.19.1"
tokio = { version = "1.34.0", features = ["full"]}
futures = "0.3.27"
rand = "0.8.5"
serde = "1.0.158"
serde_json = "1.0.94"
parking_lot = "0.12.1"
md5 = "0.7.0"
urlencoding = "2.1.2"
hotwatch = "0.4.6"
lazy_static="1.4.0"
base64 = "0.21.0"
bytes = "1.4.0"