[package]
authors = ["Error4767 <2303184060@qq.com>"]
edition = "2021"
name = "actix_split_chunks_upload_handlers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0" }
actix-web-lab = "0.17.0"
actix_utils = { path = "../actix_utils" }
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.24"
md5 = "0.7.0"
serde_json = "1.0.85"
urlencoding = "2.1.0"
lazy_static="1.4.0"
